@@ -5,6 +5,7 @@
 #include <cppunit/extensions/HelperMacros.h>
 #include <MySuites.h>
 #include <cppunit/extensions/MetricRegistry.h>
+#include <vpr/Sync/Mutex.h>
 
 /*****************************************************************
  tests out the functionality expected of vapor's PerfMon lib
@@ -18,12 +19,19 @@ CPPUNIT_TEST_SUITE(PerfTest);
 CPPUNIT_TEST( testConstructTree );
 CPPUNIT_TEST( testNamedLookupSample );
 CPPUNIT_TEST( testReset );
+CPPUNIT_TEST( testMultithreading );
 CPPUNIT_TEST_SUITE_END();
 
 public:
    void testNamedLookupSample();
    void testConstructTree();
    void testReset();
+   void testMultithreading();
+
+   void createSamples(void* arg);
+
+public:
+   vpr::Mutex  mOutputLock;
 };
 
 
